welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:26: error: not found: value message
  }					else if(message== "Z"){
                                                ^