welcome.lessons.welcome.bdr.BDR.scala.code
var fin=false
while (!fin){
  if (estSurMessage()){
    var message=litMessage()
    if(message == "A"){
      avance()
    }
    else if(message =="B"){
      		avance()
      		avance()
    		}
    	else if(message =="C"){
      			avance()
      			avance()
      			avance()
    			}
    		else if(message== "X"){
          		recule()
          		recule()
          		recule()
        		}
    			else if(message== "Y"){
          		recule()
          		recule()
          		}
  }					else if(message== "Z"){
          		recule()
          			}
  						
  else 
    fin=true
  
}	